<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/tt_perfil"
        android:background="@drawable/rounded_rectangle"
        android:iconTint="@color/icon_color"
        android:title="@string/menu_perfil" />
    <item
        android:id="@+id/nav_photos"
        android:icon="@drawable/tt_photos"
        android:background="@drawable/rounded_rectangle"
        android:iconTint="@color/icon_color"
        android:title="@string/menu_photos" />
    <item
        android:id="@+id/nav_video"
        android:icon="@drawable/tt_video"
        android:background="@drawable/rounded_rectangle"
        android:iconTint="@color/icon_color"
        android:title="@string/menu_video" />
    <item
        android:id="@+id/nav_web"
        android:icon="@drawable/tt_web"
        android:background="@drawable/rounded_rectangle"
        android:iconTint="@color/icon_color"
        android:title="@string/menu_web" />
    <item
        android:id="@+id/nav_buttons"
        android:icon="@drawable/tt_buttons"
        android:background="@drawable/rounded_rectangle"
        android:iconTint="@color/icon_color"
        android:title="@string/menu_buttons" />
</menu>
