<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ButtonsFragment"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/tt_tarea"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/task_image_desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_task"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:textColor="#0F4C75"
                    android:gravity="center" />
            </LinearLayout>

            <EditText
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name_hint"
                android:layout_marginBottom="12dp"
                android:backgroundTint="#BBE1FA"
                android:padding="10dp"
                android:autofillHints="name"
                android:inputType="text" />

            <EditText
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_description_hint"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#BBE1FA"
                android:padding="10dp"
                android:autofillHints="description"
                android:inputType="text" />


            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_task"
                android:textColor="#FFFFFF"
                android:backgroundTint="#176B87"
                android:layout_marginBottom="12dp"
                android:padding="12dp" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="#176B87"
                android:backgroundTint="#FFFFFF"
                android:padding="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/border_button" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>