<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4FF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_menu_24"
            android:contentDescription="@string/menu_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_marginTop="16dp"
            android:text="@string/profileName"
            android:textSize="18sp"
            android:textColor="#176B87"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_profile"
            android:padding="16dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/imageViewProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:src="@drawable/user_profile"
                android:scaleType="centerCrop"
                android:background="@drawable/profile_image_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/nameProfile"
                    android:textSize="24sp"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/rolProfile"
                    android:textSize="18sp"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/cityProfile"
                    android:textSize="16sp"
                    android:textColor="#fff" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            android:background="@drawable/description_background"
            android:text="@string/descriptionProfile"
            android:textSize="14sp"
            android:textColor="#666" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center">

            <include layout="@layout/task_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1" />

            <include layout="@layout/task_card_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
